<resources>
    <string name="app_name">CurrencyConverter App</string>
    <string name="_0_00">0.00</string>
    <string name="inr">INR</string>
    <string name="euro">€</string>
    <string name="dollar">$</string>
    <string name="pound">£</string>
    <string name="yen">¥</string>
    <string name="dinar">د.ع</string>
    <string name="btc">BTC</string>
    <string name="riyal">﷼</string>
    <string name="aus">AUS$</string>
    <string name="can">CAN$</string>
</resources>
